--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="scripts/avatars.js"></script>
   </head>
   <body>
     {{ content }}
