--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/screen.css" media="screen"/>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="scripts/avatars.js"></script>
