--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -1,7 +1,6 @@
 ---
 ---
 
-$avatarSize: 135px;
 
 body {
   font-family: Helvetica, sans-serif;
@@ -20,19 +19,25 @@ ul {
 .js-student {
   float: left;
   list-style-type: none;
-
-  // make it a fixed size so that it's a consistent grid
-  height: $avatarSize + 65px;
-  width: $avatarSize + 20px;
+  margin: 0 20px 20px 0;
 
   a {
     text-decoration: none;
   }
+  .info {
+    display: inline-block;
+    vertical-align: top;
+    width: 300px;
+  }
 }
 
 .js-avatar {
-  height: $avatarSize;
-  width: $avatarSize;
+  $size: 135px;
+
+  display: inline-block;
+  height: $size;
+  margin-right: 10px;
+  width: $size;
 }
 
 .github-username {
