--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -1,7 +1,6 @@
 ---
 ---
 
-
 body {
   font-family: Helvetica, sans-serif;
   margin: 50px;
@@ -47,4 +46,12 @@ ul {
   &:hover {
     text-decoration: underline;
   }
+}
+
+h1 {
+  text-align: center;
+}
+
+.class-year {
+  text-align: center;
 }
