Correção do título e adição de footer.

--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -1,6 +1,3 @@
----
----
-
 body {
   font-family: Helvetica, sans-serif;
   margin: 50px;
@@ -54,4 +51,17 @@ h1 {
 
 .class-year {
   text-align: center;
+}
+
+
+footer {
+   display: flex;
+   align-items: flex-end;
+   justify-content: center;
+    
+    display: -webkit-flex;
+    -webkit-align-items: flex-end;
+    -webkit-justify-content: center;
+
+    padding-bottom: 20px;
 }
