Correção do scss. Adicionado link para fonte.

--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -1,3 +1,6 @@
+---
+---
+
 body {
   font-family: Helvetica, sans-serif;
   margin: 50px;
@@ -51,17 +54,4 @@ h1 {
 
 .class-year {
   text-align: center;
-}
-
-
-footer {
-   display: flex;
-   align-items: flex-end;
-   justify-content: center;
-    
-    display: -webkit-flex;
-    -webkit-align-items: flex-end;
-    -webkit-justify-content: center;
-
-    padding-bottom: 20px;
 }
