Another url fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
   <body>
       <h1><a href="http://coltec-daw.github.io/">{{site.class_name}}</h1>
       <p class="class-year">
-          <a href="2016.html">{{2016}}</a> |
-          <a href="2017.html">{{2017}}</a> | 
-          <a href="index.html">{{site.class_year}}</a> 
+          <a href="{{"2016.html" | relative_url}}">{{2016}}</a> |
+          <a href="{{"2017.html" | relative_url}}">{{2017}}</a> | 
+          <a href="{{"index.html" | relative_url}}">{{site.class_year}}</a> 
           
           - <a href="https://github.com/COLTEC-DAW/{{site.repository_name}}">Código Fonte</a>
       </p>
