Updated students page with 2021 class

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
       <p class="class-year">
           <a href="/{{site.repository_name}}/2016.html">{{2016}}</a> |
           <a href="/{{site.repository_name}}/2017.html">{{2017}}</a> | 
+          <a href="/{{site.repository_name}}/2018.html">{{2018}}</a> | 
           <a href="/{{site.repository_name}}/index.html">{{site.class_year}}</a> 
           
           - <a href="https://github.com/COLTEC-DAW/{{site.repository_name}}">Código Fonte</a>
