--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
           <a href="/{{site.repository_name}}/2018.html">{{2018}}</a> | 
           <a href="/{{site.repository_name}}/2021.html">{{2021}}</a> | 
           <a href="/{{site.repository_name}}/2022.html">{{2022}}</a> |
+          <a href="/{{site.repository_name}}/2023.html">{{2023}}</a> |
           <a href="/{{site.repository_name}}/index.html">{{site.class_year}}</a> 
           
           - <a href="https://github.com/COLTEC-DAW/{{site.repository_name}}">Código Fonte</a>
